// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioField > should render correctly checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  cursor: text;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-14 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-14[aria-disabled='false'],
.emotion-14[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17+.emotion-19 {
  fill: #8c40ef;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17+.emotion-19 .emotion-21 {
  fill: #e5dbfd;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='true']+.emotion-19 {
  fill: #b3144d;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='true']+.emotion-19 .emotion-21 {
  fill: #ffd3e3;
}

.emotion-14[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-14[aria-disabled='true']>label,
.emotion-14[aria-disabled='true'] .emotion-17 {
  cursor: not-allowed;
}

.emotion-14[aria-disabled='true'] .emotion-19 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-14[aria-disabled='true'] .emotion-19 .emotion-21 {
  fill: #f3f3f4;
}

.emotion-16 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-16+.emotion-19 .emotion-23 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-16:checked+svg .emotion-23 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-16:checked[aria-disabled='false'][aria-invalid='false']+.emotion-19 {
  fill: #8c40ef;
}

.emotion-16:checked[aria-disabled='true'][aria-invalid='false']+.emotion-19 {
  fill: #d8c5fc;
}

.emotion-16[aria-invalid='true']:not([aria-disabled='true'])+.emotion-19 {
  fill: #e51963;
}

.emotion-16[aria-disabled='false']:active+.emotion-19 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-16[aria-disabled='false']:active+.emotion-19 .emotion-21 {
  fill: #f1eefc;
}

.emotion-16[aria-disabled='false']:focus-visible+.emotion-19 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-16[aria-invalid='true']:focus+.emotion-19 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-16[aria-invalid='true']:focus+.emotion-19 .emotion-21 {
  fill: #ffebf2;
}

.emotion-18 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-18 .emotion-21 {
  fill: #ffffff;
}

.emotion-24 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <fieldset
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-1"
          >
            <div
              class="emotion-6 emotion-1"
            >
              <legend
                class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                Label
              </legend>
            </div>
            <div
              class="emotion-10 emotion-1"
            >
              <div
                class="emotion-12 emotion-13"
              >
                <div
                  aria-disabled="false"
                  class="emotion-14 emotion-15"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="emotion-16 emotion-17"
                    id="«r1»"
                    name="radio"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="emotion-18 emotion-19"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="emotion-20 emotion-21"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="emotion-22 emotion-23"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="emotion-24 emotion-25 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                    for="«r1»"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="emotion-12 emotion-13"
              >
                <div
                  aria-disabled="false"
                  class="emotion-14 emotion-15"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="emotion-16 emotion-17"
                    id="«r4»"
                    name="radio"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="emotion-18 emotion-19"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="emotion-20 emotion-21"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="emotion-22 emotion-23"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="emotion-24 emotion-25 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                    for="«r4»"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should trigger events correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-2 {
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.75rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-8 {
  cursor: text;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-14 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 0.5rem;
}

.emotion-14[aria-disabled='false'],
.emotion-14[aria-disabled='false']>label {
  cursor: pointer;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17+.emotion-19 {
  fill: #8c40ef;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17+.emotion-19 .emotion-21 {
  fill: #e5dbfd;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='true']+.emotion-19 {
  fill: #b3144d;
}

.emotion-14:hover[aria-disabled='false'] .emotion-17[aria-invalid='true']+.emotion-19 .emotion-21 {
  fill: #ffd3e3;
}

.emotion-14[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.emotion-14[aria-disabled='true']>label,
.emotion-14[aria-disabled='true'] .emotion-17 {
  cursor: not-allowed;
}

.emotion-14[aria-disabled='true'] .emotion-19 {
  fill: #e9eaeb;
  cursor: not-allowed;
}

.emotion-14[aria-disabled='true'] .emotion-19 .emotion-21 {
  fill: #f3f3f4;
}

.emotion-16 {
  cursor: pointer;
  position: absolute;
  height: 1.5rem;
  width: 1.5rem;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.emotion-16+.emotion-19 .emotion-23 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.emotion-16:checked+svg .emotion-23 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-16:checked[aria-disabled='false'][aria-invalid='false']+.emotion-19 {
  fill: #8c40ef;
}

.emotion-16:checked[aria-disabled='true'][aria-invalid='false']+.emotion-19 {
  fill: #d8c5fc;
}

.emotion-16[aria-invalid='true']:not([aria-disabled='true'])+.emotion-19 {
  fill: #e51963;
}

.emotion-16[aria-disabled='false']:active+.emotion-19 {
  background-color: #5e127e40;
  fill: #8c40ef;
}

.emotion-16[aria-disabled='false']:active+.emotion-19 .emotion-21 {
  fill: #f1eefc;
}

.emotion-16[aria-disabled='false']:focus-visible+.emotion-19 {
  outline: -webkit-focus-ring-color auto 1px;
}

.emotion-16[aria-invalid='true']:focus+.emotion-19 {
  background-color: #f91b6c40;
  fill: #e51963;
}

.emotion-16[aria-invalid='true']:focus+.emotion-19 .emotion-21 {
  fill: #ffebf2;
}

.emotion-18 {
  height: 1.5rem;
  width: 1.5rem;
  min-width: 1.5rem;
  min-height: 1.5rem;
  border-radius: 100%;
  fill: #d9dadd;
}

.emotion-18 .emotion-21 {
  fill: #ffffff;
}

.emotion-24 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  cursor: pointer;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="emotion-0 emotion-1"
      >
        <fieldset
          class="emotion-2 emotion-3"
        >
          <div
            class="emotion-4 emotion-1"
          >
            <div
              class="emotion-6 emotion-1"
            >
              <legend
                class="emotion-8 emotion-9 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                RadioGroupField events
              </legend>
            </div>
            <div
              class="emotion-10 emotion-1"
            >
              <div
                class="emotion-12 emotion-13"
              >
                <div
                  aria-disabled="false"
                  class="emotion-14 emotion-15"
                  data-checked="true"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="emotion-16 emotion-17"
                    id="«r8»"
                    name="test"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="emotion-18 emotion-19"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="emotion-20 emotion-21"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="emotion-22 emotion-23"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="emotion-24 emotion-25 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                    for="«r8»"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="emotion-12 emotion-13"
              >
                <div
                  aria-disabled="false"
                  class="emotion-14 emotion-15"
                  data-checked="false"
                  data-error="false"
                >
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    class="emotion-16 emotion-17"
                    id="«rb»"
                    name="test"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="emotion-18 emotion-19"
                    viewBox="0 0 24 24"
                  >
                    <g>
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="emotion-20 emotion-21"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="emotion-22 emotion-23"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="emotion-24 emotion-25 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                    for="«rb»"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
